# memogent

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo_report.md  populate_git.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-android.yml  ci-cpp.yml  ci-ios.yml  ci-python.yml
bench/: README.md
bindings/android/: README.md  build.gradle.kts  settings.gradle.kts
bindings/android/src/main/: AndroidManifest.xml
bindings/android/src/main/cpp/: CMakeLists.txt  memogent_jni.cpp
bindings/android/src/main/java/dev/memogent/: Memogent.kt  Orchestrator.kt  UsageStatsSource.kt
bindings/c/: CMakeLists.txt  memogent_c.cpp  memogent_c.h
bindings/ios/: Package.swift  README.md
bindings/ios/Sources/Memogent/: Memogent.swift
bindings/ios/Sources/MemogentC/include/: MemogentC.h  memogent_c.h  module.modulemap
bindings/ios/Tests/MemogentTests/: MemogentTests.swift
cmake/: CPM.cmake  dependencies.cmake  platform.cmake
core/include/memogent/: adaptive_cache.hpp  app_event.hpp  arbiter.hpp  clock.hpp  config.hpp  device_state.hpp  kv_cache.hpp  logger.hpp  memogent.hpp  model_swap.hpp  orchestrator.hpp  predictor.hpp  preloader.hpp  result.hpp  storage.hpp  telemetry.hpp  types.hpp  version.hpp
core/src/: device_state.cpp  orchestrator.cpp  types.cpp
core/src/arbiter/: arbiter.cpp
core/src/caches/: caches.cpp
core/src/kv_cache/: kv_cache.cpp
core/src/model_swap/: model_swap.cpp
core/src/predictors/: predictors.cpp
core/src/preloader/: preloader.cpp
core/src/storage/: in_memory_storage.cpp
core/src/telemetry/: telemetry.cpp
core/src/util/: clock.cpp  logger.cpp
cpp_tests/: CMakeLists.txt  test_cache.cpp  test_orchestrator.cpp  test_predictor.cpp
docs/: ARCHITECTURE.md  HACKATHON_BLUEPRINT.md  INTEGRATION_ANDROID.md  INTEGRATION_IOS.md  KPI_HARNESS.md  PREDICTOR_DESIGN.md  RESEARCH_SURVEY.md  ROADMAP.md  SECURITY.md
examples/cpp_cli/: CMakeLists.txt  main.cpp
python/: Makefile  README.md  pyproject.toml
python/memogent/: __init__.py  config.py  orchestrator.py  telemetry.py  types.py
python/memogent/arbiter/: __init__.py
python/memogent/bench/: __init__.py  harness.py
python/memogent/cache/: __init__.py  arc.py  base.py  factory.py  lfu.py  lru.py
python/memogent/cli/: main.py
python/memogent/datasets/: __init__.py  lsapp.py  synth.py
python/memogent/predictor/: __init__.py  base.py  factory.py  freq_recency.py  markov.py  most_frequent.py  most_recent.py
python/tests/: test_core.py
scripts/: fetch_datasets.sh  install.sh
