[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memogent"
version = "0.1.0"
description = "Context-aware adaptive memory orchestrator — Python reference runtime"
readme = "README.md"

requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lagmator22" }]
keywords = ["on-device", "mobile", "memory", "cache", "predictor", "samsung", "ax-hackathon"]

dependencies = [
    "numpy>=1.26",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
train = ["torch>=2.2", "tqdm>=4.66"]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
mem = "memogent.cli.main:cli"

[tool.setuptools.packages.find]
include = ["memogent*"]

[tool.ruff]
line-length = 100
target-version = "py310"
